@@ -164,7 +164,7 @@
   when: not instance_config.plone_buildout_git_repo
   template:
     src=buildout.cfg.j2
-    dest={{ plone_instance_home }}/buildout.cfg
+    dest={{ plone_instance_home }}/{{ plone_buildout_cfg }}
     owner={{ instance_config.plone_buildout_user }}
     group={{ instance_config.plone_group }}
     backup=yes
@@ -229,7 +229,7 @@
 
 
 ###################################
-# Bootstrap and run buildout
+# Run buildout
 
 - name: Copy files from the buildout extra dir
   copy:
@@ -246,7 +246,7 @@
   when: instance_config.plone_always_run_buildout or
         instance_config.plone_autorun_buildout and
         (instance_status.changed or extra_dir_copy_result.changed or not buildout_status.stat.exists)
-  shell: "bin/buildout > buildout.log 2>&1"
+  shell: "bin/buildout -c {{ plone_buildout_cfg }} > buildout.log 2>&1"
   args:
     chdir: "{{ plone_instance_home }}"
   become_user: "{{ instance_config.plone_buildout_user }}"
